# somethingkillingtime

./: readme.txt
CUDA_learning/: CUDA_learning.sln  CUDA_learning.vcxproj
cuda_kernel_lib/: .gitignore  CMakeLists.txt  kernel_test  kernel_test.exp
cuda_kernel_lib/kernel/: CMakeLists.txt
cuda_kernel_lib/kernel/inc/: cu_mean_filter.h
cuda_kernel_lib/kernel/src/: cu_mean_filter.cu
cuda_kernel_lib/test/: common.h  data_file.c  data_file.h  data_path.h.in  main.c  meanfilter_test.cpp  meanfilter_test.h
